--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "webapp",
+  "name": "aws-cdk",
   "version": "0.1.0",
   "bin": {
-    "webapp": "bin/webapp.js"
+    "aws-cdk": "bin/aws-cdk.js"
   },
   "scripts": {
     "build": "tsc",
@@ -13,13 +13,16 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
+    "aws-cdk": "2.1007.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "aws-cdk": "2.1007.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@aws-cdk/aws-ec2": "^1.203.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "^1.203.0",
+    "@aws-cdk/aws-iam": "^1.203.0",
     "aws-cdk-lib": "2.186.0",
     "constructs": "^10.0.0"
   }
